0.03

0.02 2024-08-04T18:25:33+02:00
 - Add margin to #main CSS id in List.
 - Rewrite font in List to sans-serif.
 - Update to Tags helper with margin and sans-serif font.

0.01 2024-08-04T17:24:21+02:00
 - First version.