@@ -35,7 +35,7 @@ requires 'Plack::Session' => 0;
 requires 'Plack::Util::Accessor' => 0;
 requires 'Readonly' => 0;
 requires 'Tags::HTML::Container' => 0;
-requires 'Tags::HTML::Footer' => 0;
+requires 'Tags::HTML::Footer' => 0.03;
 requires 'Tags::HTML::Messages' => 0;
 requires 'Tags::HTML::Message::Board' => 0.05;
 requires 'Tags::HTML::Message::Board::Blank' => 0.05;
