@@ -1,4 +1,5 @@
 0.03
+ - Update footer to version with sans-serif font.
 
 0.02 2024-08-04T18:25:33+02:00
  - Add margin to #main CSS id in List.
